cluster_access_TLSE2E/ingress_lb_tst.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefiktls-ingress
  namespace: tlson # can remove afterwards if load this into helm chart folders
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    kubernetes.io/ingress.class: gce # Although deprecated by kubernetes spec, GKE still uses this, so must be used
    # Add static IP & pre-shared cert annotations
spec:
  tls:
  - secretName: traefik-tls-cert
  defaultBackend:
    service:
      name: traefik
      port:
        number: 443
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# Note: Keep in mind that TLS will not work on the default rule because the certificates would have to be issued for all the possible sub-domains. Therefore, hosts in the tls section need to explicitly match the host in the rules section.
# May get around it by having mentioned the host in traefik helm deploy tls directly?
# spec:
#   rules:
#     - host: *.clemoregan.com  # just include only traefik subdomain? 
#       http:
#         paths:
#           - path: /* # added * for all paths
#             pathType: Prefix
#             backend:
#               service:
#                 name: traefik
#                 port:
#                   number: 443
#   tls:
#     - hosts:
#         - *.clemoregan.com
#       secretName: traefik-tls-cert
